# alef

./: .gitattributes  .gitignore  .goreleaser.yaml  .mcp.json  .oxfmtrc.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .typos.toml  CHANGELOG.md  CHANGELOG.md.tmp  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  alef.toml  build.rs  deny.toml  poly.toml  renovate.json  ruff.toml  rust-toolchain.toml
crates/alef-adapters/: Cargo.toml
crates/alef-adapters/src/: async_method.rs  callback_bridge.rs  lib.rs  streaming.rs  sync_function.rs
crates/alef-adapters/tests/: adapter_test.rs
crates/alef-backend-csharp/: Cargo.toml
crates/alef-backend-csharp/src/: gen_bindings.rs  gen_visitor.rs  lib.rs  template_env.rs  trait_bridge.rs  type_map.rs
crates/alef-backend-csharp/templates/: async_task_return_type.jinja  bytes_result_call.jinja  callback_bytes_param.jinja  callback_json_deserialize.jinja  callback_json_from_ptr.jinja  callback_result_call.jinja  callback_result_serialize.jinja  callback_string_param.jinja  callback_void_call.jinja  class_header.jinja  deserialize_json.jinja  doc_comment_block.jinja  enum_custom_converter.jinja  enum_header.jinja  error_helper_method.jinja  exception_class.jinja  exception_return.jinja  extern_ptr_from_json.jinja  ffi_json_extensions.jinja  free_native_handle.jinja  free_native_string.jinja  free_string_ptr.jinja  indented_arg_sync.jinja  json_converter_attr.jinja  json_derived_type_attr.jinja  json_extension_data_property.jinja  json_from_ptr.jinja  json_polymorphic_attr.jinja  json_property_name_attr.jinja  named_param_handle_from_json.jinja  named_param_handle_from_json_optional.jinja  named_param_handle_string.jinja  named_param_json_optional.jinja  named_param_json_serialize.jinja  named_param_teardown_hglobal.jinja  native_bytes_len_arg_line.jinja  native_call_start.jinja  native_methods_trait_bridges.jinja  native_to_json_ptr.jinja  node_context.jinja  (+40 more)
crates/alef-backend-csharp/tests/: example_generation.rs  gen_bindings_test.rs
crates/alef-backend-dart/: Cargo.toml
crates/alef-backend-dart/benches/: emit.rs
crates/alef-backend-dart/examples/: rewrite_lib_dart.rs
crates/alef-backend-dart/src/: frb_rewrite.rs  ident.rs  lib.rs  naming.rs  template_env.rs  type_map.rs
crates/alef-backend-dart/templates/: abstract_class_doc_code_create.jinja  abstract_class_doc_code_end.jinja  dart_barrel_file.jinja  dart_streaming_method.jinja  dart_trait_clear_method.jinja  dart_trait_register_method.jinja  dart_trait_unregister_method.jinja  enum_unit_variant.jinja  error_message_property.jinja  error_sealed_class.jinja  ffi_async_todo.jinja  ffi_call_result.jinja  ffi_check_error_doc_comment.jinja  ffi_error_throws_doc.jinja  ffi_free_native.jinja  ffi_free_string_lookup.jinja  ffi_function_lookup.jinja  ffi_last_error_code_doc_comment.jinja  ffi_lib_path_linux_return.jinja  ffi_lib_path_macos.jinja  ffi_lib_path_windows.jinja  ffi_param_alloc_string.jinja  ffi_return_value.jinja  ffi_typedef_native.jinja  ffi_wrapper_fn_open.jinja  final_class_extends.jinja  final_class_header.jinja  frb_pub_async_fn.jinja  frb_pub_sync_fn.jinja  frb_result_await_method.jinja  frb_result_block_on.jinja  function_await_return.jinja  function_signature_async.jinja  function_sync_return.jinja  multi_param_constructor_open.jinja  override_message_getter.jinja  plugin_initialize_method.jinja  plugin_shutdown_method.jinja  plugin_version_method.jinja  rust_enum_struct_from_core_arm.jinja  (+28 more)
crates/alef-backend-dart/tests/: docs_test.rs  gen_bindings_test.rs  gen_ffi_test.rs  gen_rust_crate_test.rs  snapshot_test.rs
crates/alef-backend-go/: Cargo.toml
crates/alef-backend-go/src/: gen_bindings.rs  gen_visitor.rs  lib.rs  template_env.rs  trait_bridge.rs  type_map.rs
crates/alef-backend-go/templates/: base_visitor_header.jinja  base_visitor_method.jinja  bytes_result_call.jinja  bytes_to_c_pointer.jinja  c_bridge_defer_free.jinja  c_call_simple.jinja  c_call_with_json.jinja  c_conversion_result_free.jinja  c_conversion_result_to_json.jinja  c_json_to_json.jinja  c_options_from_json.jinja  c_options_from_json_with_name.jinja  c_options_from_value.jinja  c_ptr_assign_func.jinja  c_var_decl.jinja  cgo_preamble_visitor.jinja  clear_c_call.jinja  clear_function_header.jinja  config_default_field.jinja  config_new_constructor_header.jinja  config_option_type_header.jinja  config_with_option_comment.jinja  const_variant.jinja  convert_with_visitor_helper.jinja  convert_with_visitor_wrapper.jinja  decode_cells_json.jinja  enum_marshal_json.jinja  enum_unmarshal_json.jinja  export_marker.jinja  free_string.jinja  free_type.jinja  free_type_on_error.jinja  function_signature.jinja  go_const_declaration.jinja  go_file_header.jinja  go_string_cast.jinja  impl_method_call_result.jinja  json_unmarshal_error.jinja  json_unmarshal_rawdata.jinja  json_unmarshal_simple.jinja  (+62 more)
crates/alef-backend-go/tests/: bug_fixes_test.rs  gen_bindings_test.rs  gen_visitor_test.rs  go_emission_test.rs  snapshot_test.rs
crates/alef-backend-java/: Cargo.toml
crates/alef-backend-java/src/: gen_bindings.rs  gen_visitor.rs  lib.rs  template_env.rs  trait_bridge.rs  type_map.rs
crates/alef-backend-java/templates/: bridge_class_header.jinja  bridge_clear_method.jinja  bridge_constructor_end.jinja  bridge_constructor_start.jinja  bridge_helper_methods.jinja  bridge_method_handler.jinja  bridge_register_method.jinja  (+73 more)
crates/alef-backend-jni/: Cargo.toml
crates/alef-backend-kotlin/: Cargo.toml
crates/alef-backend-kotlin-android/: Cargo.toml
crates/alef-backend-napi/: Cargo.toml
crates/alef-backend-pyo3/: Cargo.toml
crates/alef-backend-swift/: Cargo.toml
crates/alef-backend-wasm/: Cargo.toml
crates/alef-backend-zig/: Cargo.toml
crates/alef-cli/: Cargo.toml  build.rs
crates/alef-codegen/: Cargo.toml
crates/alef-core/: Cargo.toml
crates/alef-docs/: Cargo.toml
crates/alef-e2e/: Cargo.toml
crates/alef-extract/: Cargo.toml
crates/alef-publish/: Cargo.toml
crates/alef-readme/: Cargo.toml
crates/alef-scaffold/: Cargo.toml
crates/alef-snippets/: Cargo.toml
(+4226 files in other folders)
