[workspace]
resolver = "2"
members = [
    "crates/alef-adapters",
    "crates/alef-backend-csharp",
    "crates/alef-backend-dart",
    "crates/alef-backend-extendr",
    "crates/alef-backend-ffi",
    "crates/alef-backend-gleam",
    "crates/alef-backend-go",
    "crates/alef-backend-java",
    "crates/alef-backend-kotlin",
    "crates/alef-backend-magnus",
    "crates/alef-backend-napi",
    "crates/alef-backend-php",
    "crates/alef-backend-pyo3",
    "crates/alef-backend-rustler",
    "crates/alef-backend-swift",
    "crates/alef-backend-wasm",
    "crates/alef-backend-zig",
    "crates/alef-cli",
    "crates/alef-codegen",
    "crates/alef-core",
    "crates/alef-docs",
    "crates/alef-e2e",
    "crates/alef-extract",
    "crates/alef-publish",
    "crates/alef-readme",
    "crates/alef-scaffold",
]

[workspace.package]
version = "0.13.9"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/kreuzberg-dev/alef"
homepage = "https://github.com/kreuzberg-dev/alef"
keywords = ["codegen", "bindings", "ffi", "polyglot", "pyo3"]
categories = ["development-tools::ffi", "development-tools::build-utils"]

[workspace.dependencies]
ahash = "0.8"
alef-adapters = { version = "0.13.8", path = "crates/alef-adapters" }
alef-backend-csharp = { version = "0.13.8", path = "crates/alef-backend-csharp" }
alef-backend-dart = { version = "0.13.8", path = "crates/alef-backend-dart" }
alef-backend-extendr = { version = "0.13.8", path = "crates/alef-backend-extendr" }
alef-backend-ffi = { version = "0.13.8", path = "crates/alef-backend-ffi" }
alef-backend-gleam = { version = "0.13.8", path = "crates/alef-backend-gleam" }
alef-backend-go = { version = "0.13.8", path = "crates/alef-backend-go" }
alef-backend-java = { version = "0.13.8", path = "crates/alef-backend-java" }
alef-backend-kotlin = { version = "0.13.8", path = "crates/alef-backend-kotlin" }
alef-backend-magnus = { version = "0.13.8", path = "crates/alef-backend-magnus" }
alef-backend-napi = { version = "0.13.8", path = "crates/alef-backend-napi" }
alef-backend-php = { version = "0.13.8", path = "crates/alef-backend-php" }
alef-backend-pyo3 = { version = "0.13.8", path = "crates/alef-backend-pyo3" }
alef-backend-rustler = { version = "0.13.8", path = "crates/alef-backend-rustler" }
alef-backend-swift = { version = "0.13.8", path = "crates/alef-backend-swift" }
alef-backend-wasm = { version = "0.13.8", path = "crates/alef-backend-wasm" }
alef-backend-zig = { version = "0.13.8", path = "crates/alef-backend-zig" }
alef-codegen = { version = "0.13.8", path = "crates/alef-codegen" }
alef-core = { version = "0.13.8", path = "crates/alef-core" }
alef-docs = { version = "0.13.8", path = "crates/alef-docs" }
alef-e2e = { version = "0.13.8", path = "crates/alef-e2e" }
alef-extract = { version = "0.13.8", path = "crates/alef-extract" }
alef-publish = { version = "0.13.8", path = "crates/alef-publish" }
alef-readme = { version = "0.13.8", path = "crates/alef-readme" }
alef-scaffold = { version = "0.13.8", path = "crates/alef-scaffold" }
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
heck = "0.5"
insta = { version = "1.47", features = ["redactions"] }
jsonschema = { version = "0.46", default-features = false, features = ["resolve-file"] }
minijinja = "2"
quote = "1"
rayon = "1"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
syn = { version = "2", features = ["full", "parsing", "visit"] }
thiserror = "2"
toml = "1.1"
toml_edit = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-test = "0.2"
ureq = { version = "3", features = ["json"] }
