[package]
name = "alef-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "FFI adapter pattern generators for alef"
readme = "README.md"
repository.workspace = true
homepage.workspace = true

[dependencies]
ahash = { workspace = true }
alef-core = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
