[package]
name = "alef-backend-csharp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "C# (P/Invoke) backend for alef"
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
alef-adapters = { workspace = true }
alef-codegen = { workspace = true }
alef-core = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
