[package]
name = "alef-backend-go"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Go (cgo) backend for alef"
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
alef-adapters = { workspace = true }
alef-codegen = { workspace = true }
alef-core = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
minijinja = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
