[package]
name = "alef-backend-java"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Java (Panama FFM) backend for alef"
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
ahash = { workspace = true }
alef-codegen = { workspace = true }
alef-core = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
minijinja = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
