[package]
name = "alef-backend-kotlin-android"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Kotlin/Android (AAR library) backend for alef"
repository.workspace = true
homepage.workspace = true

[dependencies]
alef-backend-kotlin = { workspace = true }
alef-core = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
toml = { workspace = true }
