[package]
name = "alef-backend-kotlin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Kotlin (JVM) backend for alef"
repository.workspace = true
homepage.workspace = true

[dependencies]
alef-codegen = { workspace = true }
alef-core = { workspace = true }
alef-docs = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
minijinja = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
alef-backend-jni = { workspace = true }
criterion = { version = "0.8", features = ["html_reports"] }
insta = { workspace = true }
toml = { workspace = true }

[[bench]]
name = "emit"
harness = false
