[package]
name = "alef-backend-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM (wasm-bindgen) backend for alef"
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
ahash = { workspace = true }
alef-adapters = { workspace = true }
alef-codegen = { workspace = true }
alef-core = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
