[package]
name = "alef-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for the alef polyglot binding generator"
readme = "README.md"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/alef-{ target }{ archive-suffix }"
bin-dir = "alef-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-gnu]
pkg-fmt = "zip"

[[bin]]
name = "alef"
path = "src/main.rs"

[dependencies]
ahash = { workspace = true }
alef-backend-csharp = { workspace = true }
alef-backend-dart = { workspace = true }
alef-backend-extendr = { workspace = true }
alef-backend-ffi = { workspace = true }
alef-backend-gleam = { workspace = true }
alef-backend-go = { workspace = true }
alef-backend-java = { workspace = true }
alef-backend-kotlin = { workspace = true }
alef-backend-magnus = { workspace = true }
alef-backend-napi = { workspace = true }
alef-backend-php = { workspace = true }
alef-backend-pyo3 = { workspace = true }
alef-backend-rustler = { workspace = true }
alef-backend-swift = { workspace = true }
alef-backend-wasm = { workspace = true }
alef-backend-zig = { workspace = true }
alef-core = { workspace = true }
alef-docs = { workspace = true }
alef-e2e = { workspace = true }
alef-extract = { workspace = true }
alef-publish = { workspace = true }
alef-readme = { workspace = true }
alef-scaffold = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
glob = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
tempfile = "3"
