[package]
name = "alef-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared codegen utilities for the alef polyglot binding generator"
readme = "README.md"

[dependencies]
ahash = { workspace = true }
alef-core = { workspace = true }
heck = { workspace = true }
minijinja = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
