[package]
name = "alef-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types, config schema, and backend trait for the alef polyglot binding generator"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
heck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
