[package]
name = "alef-docs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "API reference documentation generator for alef polyglot bindings"
readme = "README.md"

[dependencies]
alef-core = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
minijinja = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
