[package]
name = "alef-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Fixture-driven e2e test generator for alef"
readme = "README.md"

[dependencies]
alef-codegen = { workspace = true }
alef-core = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
jsonschema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
