[package]
name = "alef-extract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rust source extraction for alef"
readme = "README.md"
repository.workspace = true
homepage.workspace = true

[dependencies]
ahash = { workspace = true }
alef-core = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
