[package]
name = "alef-publish"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Publish pipeline for the alef polyglot binding generator"

[dependencies]
alef-core = { workspace = true }
alef-scaffold = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
