[package]
name = "alef-scaffold"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Package scaffolding generator for alef"
readme = "README.md"
repository.workspace = true
homepage.workspace = true

[dependencies]
alef-backend-dart = { workspace = true }
alef-backend-php = { workspace = true }
alef-core = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
minijinja = { workspace = true }
toml = { workspace = true }
