[package]
name = "alef-snippets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Reusable documentation snippet discovery and validation for Alef"
readme = "README.md"

[[bin]]
name = "alef-snippets"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap"]

[dependencies]
clap = { workspace = true, optional = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
